sidebar fix, text align fix on mobile

--- a/src/assets/css/now-ui-kit.css
+++ b/src/assets/css/now-ui-kit.css
@@ -2886,7 +2886,7 @@ p {
   color: rgba(255, 255, 255, 0.8);
 }
 
-@media (max-width: 480px) {
+@media (max-width: 576px) {
   h1,
   .h1 {
     font-size: 2.5em;
@@ -2936,7 +2936,7 @@ p {
     font-size: 0.9em;
   }
 }
-@media (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 576px) and (max-width: 768px) {
   h1,
   .h1 {
     font-size: 3em;
@@ -3036,7 +3036,7 @@ p {
     font-size: 1.1em;
   }
 }
-@media (max-width: 480px) {
+@media (max-width: 576px) {
   .h1,
   .h2,
   .h3 {
@@ -3051,7 +3051,7 @@ p {
     padding-top: 15px;
   }
 }
-@media (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 576px) and (max-width: 768px) {
   .h1,
   .h2,
   .h3 {
@@ -3081,13 +3081,13 @@ p {
     padding-top: 30px;
   }
 }
-@media (max-width: 480px) {
+@media (max-width: 576px) {
   .blockquote {
     padding: 15px;
     border-width: 1px;
   }
 }
-@media (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 576px) and (max-width: 768px) {
   .blockquote {
     padding: 18px;
     border-width: 1.5px;
@@ -3097,6 +3097,11 @@ p {
   .blockquote {
     padding: 20px;
     border-width: 2px;
+  }
+}
+@media (min-width: 576px) {
+  .text-justify-desktop {
+    text-align: justify;
   }
 }
 body {
@@ -5518,7 +5523,6 @@ img {
     flex-direction: row-reverse;
   }
   .sidebar-collapse .navbar .navbar-nav {
-    margin-top: 53px;
     position: relative;
     max-height: calc(100vh - 75px);
     min-height: 100%;
@@ -5714,7 +5718,6 @@ img {
     flex-direction: row-reverse;
   }
   .bootstrap-collapse .navbar .navbar-nav {
-    margin-top: 53px;
     position: relative;
     max-height: calc(100vh - 75px);
     min-height: 100%;
@@ -5913,7 +5916,6 @@ img {
     flex-direction: row-reverse;
   }
   .burger-menu .navbar .navbar-nav {
-    margin-top: 53px;
     position: relative;
     max-height: calc(100vh - 75px);
     min-height: 100%;
@@ -7159,8 +7161,7 @@ td.rdtYear:hover {
 }
 .preview-img {
   height: 20vh;
-  width: 30vw;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .truncated-title {
@@ -7338,6 +7339,78 @@ td.rdtYear:hover {
   }
   100% {
     opacity: 1;
+  }
+}
+.whatsapp-button {
+  -webkit-animation: wobble-ver-right 5s both infinite;
+  animation: wobble-ver-right 5s both infinite;
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2024-5-28 11:59:52
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info. 
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+/**
+ * ----------------------------------------
+ * animation wobble-ver-right
+ * ----------------------------------------
+ */
+@-webkit-keyframes wobble-ver-right {
+  0%, 17%, 100% {
+    -webkit-transform: translateY(0) rotate(0);
+    transform: translateY(0) rotate(0);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+  }
+  3% {
+    -webkit-transform: translateY(-30px) rotate(6deg);
+    transform: translateY(-30px) rotate(6deg);
+  }
+  6% {
+    -webkit-transform: translateY(15px) rotate(-6deg);
+    transform: translateY(15px) rotate(-6deg);
+  }
+  9% {
+    -webkit-transform: translateY(-15px) rotate(3.6deg);
+    transform: translateY(-15px) rotate(3.6deg);
+  }
+  12% {
+    -webkit-transform: translateY(9px) rotate(-2.4deg);
+    transform: translateY(9px) rotate(-2.4deg);
+  }
+  15% {
+    -webkit-transform: translateY(-6px) rotate(1.2deg);
+    transform: translateY(-6px) rotate(1.2deg);
+  }
+}
+@keyframes wobble-ver-right {
+  0%, 17%, 100% {
+    -webkit-transform: translateY(0) rotate(0);
+    transform: translateY(0) rotate(0);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+  }
+  3% {
+    -webkit-transform: translateY(-30px) rotate(6deg);
+    transform: translateY(-30px) rotate(6deg);
+  }
+  6% {
+    -webkit-transform: translateY(15px) rotate(-6deg);
+    transform: translateY(15px) rotate(-6deg);
+  }
+  9% {
+    -webkit-transform: translateY(-15px) rotate(3.6deg);
+    transform: translateY(-15px) rotate(3.6deg);
+  }
+  12% {
+    -webkit-transform: translateY(9px) rotate(-2.4deg);
+    transform: translateY(9px) rotate(-2.4deg);
+  }
+  15% {
+    -webkit-transform: translateY(-6px) rotate(1.2deg);
+    transform: translateY(-6px) rotate(1.2deg);
   }
 }
 
