--- a/src/assets/scss/custom/product-preview.scss
+++ b/src/assets/scss/custom/product-preview.scss
@@ -1,7 +1,7 @@
 .preview-img {
   height: 20vh;
-  width: 30vw;
-  object-fit: contain;
+  // width: 30vw;
+  object-fit: cover;
 }
 
 .truncated-title {
