--- a/src/assets/scss/now-ui-kit/_typography.scss
+++ b/src/assets/scss/now-ui-kit/_typography.scss
@@ -416,3 +416,9 @@ p {
     border-width: 2px;
   }
 }
+
+@media (min-width: 576px) {
+  .text-justify-desktop {
+    text-align: justify;
+  }
+}
