--- a/src/assets/scss/now-ui-kit/mixins/_navbar.scss
+++ b/src/assets/scss/now-ui-kit/mixins/_navbar.scss
@@ -6,6 +6,7 @@
     .navbar{
         .navbar-nav{
             margin-top: 53px;
+            padding-bottom: 60px;
             position: relative;
         	  max-height: calc(100vh - 75px);
         	  min-height: 100%;
